# Howlite

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  Howlite.sln
CMake/: FindDirectX11.cmake
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Platform.h  Window.cpp  Window.h
Engine/ECS/: Component.h  ComponentManager.cpp  ComponentManager.h  ComponentPool.h  Entity.h  EntityManager.cpp  EntityManager.h  EntityPool.h  System.h  SystemManager.cpp  SystemManager.h
Engine/Event/: Event.h  EventManager.cpp  EventManager.h
Engine/Graphics/: RenderSystem.cpp  RenderSystem.h
Engine/Input/: InputSystem.cpp  InputSystem.h
Engine/Memory/: MemoryManager.cpp  MemoryManager.h
Engine/Memory/Allocator/: IAllocator.h  LinearAllocator.cpp  LinearAllocator.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h
Engine/Render/: ConstantBuffer.h  Device.cpp  Device.h  IBindable.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  PixelShader.cpp  PixelShader.h  RenderSystem.cpp  RenderSystem.h  SwapChain.cpp  SwapChain.h  Topology.cpp  Topology.h  VertexBuffer.cpp  VertexBuffer.h  VertexShader.cpp  VertexShader.h
Engine/Scene/: Camera.cpp  Camera.h
Engine/Scene/Component/: CameraComponent.cpp  CameraComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/Shaders/: CMakeLists.txt  test_PS.hlsl  test_VS.hlsl
Engine/Utilities/: ObjectPool.h  TypeRegistry.cpp  TypeRegistry.h
Howlite/: Howlite.rc  Howlite.vcxproj  Howlite.vcxproj.filters  HowlitePCH.cpp  HowlitePCH.h  resource.h
Howlite/Common/: Buffer.cpp  Buffer.h  Color.cpp  Color.h  Image.cpp  Image.h  Math.h  String.cpp  String.h  Tick.cpp  Tick.h  UUID.cpp  UUID.h
Howlite/Engine/: Engine.cpp  Engine.h  Exception.cpp  Exception.h  Main.cpp  Window.cpp  Window.h
Howlite/Event/: Event.cpp  Event.h  KeyboardEvent.cpp  KeyboardEvent.h  MouseEvent.cpp  MouseEvent.h  WindowEvent.cpp  WindowEvent.h
Howlite/Graphic/: Bindable.h  BindableCommon.h  Camera.cpp  Camera.h  ConstantBuffer.cpp  ConstantBuffer.h  Cube.cpp  Cube.h  DXGIInfoQueue.cpp  Drawable.cpp  Drawable.h  GraphicSystem.cpp  GraphicSystem.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  Sampler.cpp  Sampler.h  ShaderTable.cpp  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Topology.cpp  TransformBuffer.cpp  TransformBuffer.h  VertexBuffer.cpp  VertexShader.cpp  VertexShader.h
Howlite/Graphic/HLSL/: ConstantBuffer.hlsli  PhongPS.hlsl  PhongVS.hlsl  SolidPS.hlsl  SolidVS.hlsl  Texture.hlsli
Howlite/Input/: InputSystem.cpp  InputSystem.h
Howlite/Renderer/: Bindable.cpp  Bindable.h  BindableCommon.h  Camera.cpp  Camera.h  ConstantBuffer.h  Cube.cpp  Cube.h  DXGIInfoQueue.h  Drawable.h  GraphicSystem.cpp  GraphicSystem.h  InputLayout.cpp  PixelShader.cpp  PixelShader.h  Sampler.h  Topology.h  TransformBuffer.cpp  TransformBuffer.h  VertexBuffer.h
Howlite/Renderer/UI/: UISystem.cpp  UISystem.h
Howlite/Shader/: ConstantBuffer.hlsli  PhongPixelShader.hlsl  PhongVertexShader.hlsl  Phong_PS.hlsl  Phong_VS.hlsl  PixelShader.hlsl  ShaderTable.cpp  ShaderTable.h  Solid_PS.hlsl  Solid_VS.hlsl  TextureVertexShader.hlsl  Texture_PS.hlsl  Texture_VS.hlsl  VertexShader.hlsl
Howlite/UI/: UISystem.cpp  UISystem.h
Howlite/UI/Imgui/: imgui.cpp
Sandbox/: CMakeLists.txt  Sandbox.cpp
